commiting added changes to file

--- a/src/MEMSail/appsettings.json
+++ b/src/MEMSail/appsettings.json
@@ -3,6 +3,7 @@
     "InstrumentationKey": ""
   },
   "ConnectionStrings": {
+    "SailConnection": "Server=(localdb)\\MSSQLLocalDB;Initial Catalog=Sail;Integrated Security=SSPI;MultipleActiveResultSets=true",
     "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-MEMSail-8ba3c0e4-a8ef-43ce-85ee-bb54d0be5de8;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
   "Logging": {
